--- a/guide/relational-models/renaming-and-division.qmd
+++ b/guide/relational-models/renaming-and-division.qmd
@@ -90,6 +90,33 @@ Entities represent real-world objects or concepts, while attributes describe the
 
 -->
 
+
+```{python}
+#| echo: false
+import pandas as pd
+from tabulate import tabulate
+from IPython.display import display, Markdown, HTML
+
+
+def show_df( df, width="80%" ):
+#   display(Markdown(df.to_markdown(index=False)))
+#   print("<center>")
+#   print(tabulate(df, headers='keys', tablefmt='pretty', showindex=False))   
+#   print("</center>")
+   html_table = df.drop_duplicates().to_html(index=False)
+
+   # Define the HTML with centered table and 75% width
+   html_content = f"""
+   <div style="text-align: center;">
+      <div style="display: inline-block; width: {width};">
+         {html_table}
+      </div>
+   </div>
+"""
+   display(HTML(html_content))
+
+```
+
 Renaming and division are essential operations in relational algebra, each playing a crucial role in query design and data manipulation. Renaming clarifies queries by assigning distinct names to relations and attributes, improving readability, especially in complex queries. Division enables the retrieval of tuples related to all values in another set, useful for queries that require complete matches across relations.
 
 ## Renaming in Relational Algebra
@@ -279,6 +306,66 @@ Division can be represented using the `/` operator between two relations. Unders
 :::
 
 *The division operator retrieves records that match a complete set of conditions across relations.*
+
+Here’s the **division** relational operator example using the template format you provided earlier:
+
+```{python}
+#| echo: false
+data_customers = {
+    'CustomerID': ['C001', 'C001', 'C002', 'C002', 'C002', 'C003'],
+    'DishID': ['D001', 'D002', 'D001', 'D002', 'D003', 'D001']
+}
+customers = pd.DataFrame(data_customers)
+
+data_dimsum = {
+    'DishID': ['D001', 'D002', 'D003'],
+    'DishName': ['Siu Mai', 'Har Gow', 'Char Siu Bao']
+}
+dimsum = pd.DataFrame(data_dimsum)
+```
+
+### Division - ÷ - Example
+
+::: {.guide-block-left}
+Given *Customers(CustomerID, DishID)*:
+
+```{python}
+#| echo: false
+show_df(customers)
+```
+
+and *DimSum(DishID, DishName)*:
+
+```{python}
+#| echo: false
+show_df(dimsum)
+```
+
+:::
+::: {.guide-block-right}
+Find the customers who have ordered all dim sum dishes:
+
+```{python}
+#| echo: false
+# First, group by CustomerID and find the unique DishID each customer has ordered
+customer_orders = customers.groupby('CustomerID')['DishID'].apply(set).reset_index()
+
+# Get the set of all dim sum dishes
+all_dimsum_dishes = set(dimsum['DishID'])
+
+# Filter customers who have ordered all dim sum dishes
+customers_with_all_dimsum = customer_orders[customer_orders['DishID'].apply(lambda x: all_dimsum_dishes.issubset(x))]
+
+# Show the resulting customers
+show_df(customers_with_all_dimsum[['CustomerID']])
+```
+
+This query performs a **division** operation to find customers who have ordered **all** the dim sum dishes listed in the `DimSum` table. The result shows only those customers (in this case, `CustomerID: C002`) who have ordered all available dishes.
+
+- The `CustomerID` of the customer(s) who ordered every dim sum dish (from the `DimSum` table) will be displayed.
+
+:::
+
 
 ## Practical Use Case for Division
 
