--- a/fa2024/lectures/lecture-09.qmd
+++ b/fa2024/lectures/lecture-09.qmd
@@ -1,7 +1,7 @@
 ---
 date: 9/23/2024
 lecture-id: 9
-title: Relational Algebra 3
+title: Analysis and Normal Forms 1
 ---
 
 ```{python}
@@ -17,17 +17,24 @@ housekeeping_right_column_width="40%"
 housekeeping_vertical_spacer = "25px"
 
 discussion_items = [
-    'This is a placeholder Lecture.'
+    '[Homework 3](https://virginiacommonwealth.instructure.com/courses/105097/assignments/966521) - can still be submitted!',
+    '[Quiz 3](https://virginiacommonwealth.instructure.com/courses/105097/quizzes/199272) - due tonight!<br/>&nbsp;',
+    'Check your grades!  Are you missing anything?',
+    '[Project Deliverable 5](https://virginiacommonwealth.instructure.com/courses/105097/assignments/1021368) - Graded!',
+    'Nothing due this week!',
+    '[Project Deliverable 7](https://virginiacommonwealth.instructure.com/courses/105097/quizzes/199286) - Due 10/4 (next week)',
+    '[Homework 4 - Normal Forms](https://virginiacommonwealth.instructure.com/courses/105097/assignments/966525) - Due 10/13 (2 weeks!)'
 ]
 
 lecture_topics = [
-    'When ready, the complete lecture will replace this one.'
+    '[Analysis and Normal Forms](#analysis-and-normal-forms)'
 ]
 ```
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
 {{< include "./_template-lecture-gantt.qmd" >}}
 
+{{< include "../../topics/_analysis-and-normal-forms.qmd" >}}
 
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
