--- a/fa2024/lectures/lecture-09.qmd
+++ b/fa2024/lectures/lecture-09.qmd
@@ -14,14 +14,14 @@ housekeeping_margin_column_width = "9%"
 housekeeping_left_column_width="45%"
 housekeeping_right_column_width="40%"
 
-housekeeping_vertical_spacer = "25px"
+housekeeping_vertical_spacer = "5px"
 
 discussion_items = [
     '[Homework 3](https://virginiacommonwealth.instructure.com/courses/105097/assignments/966521) - can still be submitted!',
-    '[Quiz 3](https://virginiacommonwealth.instructure.com/courses/105097/quizzes/199272) - due tonight!<br/>&nbsp;',
+    '[Quiz 3](https://virginiacommonwealth.instructure.com/courses/105097/quizzes/199272) - due tonight!',
     'Check your grades!  Are you missing anything?',
     '[Project Deliverable 5](https://virginiacommonwealth.instructure.com/courses/105097/assignments/1021368) - Graded!',
-    'Nothing due this week!',
+    'Nothing due this week! OMG! What do I do with myself???!!!!',
     '[Project Deliverable 7](https://virginiacommonwealth.instructure.com/courses/105097/quizzes/199286) - Due 10/4 (next week)',
     '[Homework 4 - Normal Forms](https://virginiacommonwealth.instructure.com/courses/105097/assignments/966525) - Due 10/13 (2 weeks!)'
 ]
