--- a/fa2024/lectures/lecture-10.qmd
+++ b/fa2024/lectures/lecture-10.qmd
@@ -8,7 +8,7 @@ title: Analysis and Normal Forms 2
 #| echo: false
 #| label: setup
 lecture_id = 10
-n_rows = 8
+n_rows = 7
 
 housekeeping_margin_column_width = "9%"
 housekeeping_left_column_width="45%"
@@ -17,17 +17,23 @@ housekeeping_right_column_width="40%"
 housekeeping_vertical_spacer = "25px"
 
 discussion_items = [
-    'This is a placeholder Lecture.'
+    'Check your grades!  Are you missing anything?',
+    'Nothing due this week! OMG! What do I do with myself???!!!!',
+    '[Project Deliverable 7](https://virginiacommonwealth.instructure.com/courses/105097/quizzes/199286) - Due 10/4 (next week)',
+    '[Homework 4 - Normal Forms](https://virginiacommonwealth.instructure.com/courses/105097/assignments/966525) - Due 10/13 (2 weeks!)'
 ]
 
 lecture_topics = [
-    'When ready, the complete lecture will replace this one.'
+    '[Terms and Definitions](#bcnf-terms-and-definitions)',
+    '[Recognizing BCNF](#recognizing-bcnf)',
 ]
+
 ```
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
 {{< include "./_template-lecture-gantt.qmd" >}}
 
-
+{{< include "../../topics/_bcnf-terms-and-definitions.qmd" >}}
+{{< include "../../topics/_recognizing-bcnf.qmd" >}}
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
